# CeresEngine-Legacy

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.mdj  README.md
Engine/: CMakeLists.txt
Engine/PlugIns/: CMakeLists.txt
Engine/PlugIns/GLFW/: GLFW.swift  GLFWKeyboard.swift  GLFWMouse.swift
Engine/PlugIns/UI/: UIColor.swift  UIGradient.swift  UIImage.swift  UIPath.swift  UIPoint.swift  UIWindow.swift
Engine/PlugIns/UI/CNanoVG/: CNanoVG.c
Engine/PlugIns/UI/CNanoVG/include/: CNanoVG.h  module.modulemap
Engine/PlugIns/UI/Engine/: Drawer.swift  NanoVGDrawer.swift
Engine/PlugIns/UI/View/: UIButton.swift  UIControl.swift  UILabel.swift  UIView.swift
Engine/Sandbox/: CMakeLists.txt
Engine/Sandbox/Source/: main.cpp  main2.cpp
Engine/Shaders/OpenGL/: BloomBlur.fs  BloomBlur.vs  BloomExposureMapping.fs  CubicShadowMap.fs  CubicShadowMap.vs  DebugTexture.fs  DebugTexture.vs  DeferredDirectionalLight.fs  DeferredGeometry.fs  DeferredGeometry.vs  DeferredPointLight.fs  DeferredPointLight.vs  DeferredSpotLight.fs  DirectionalShadowMap.vs  ForwardLighting.fs  ForwardLighting.vs  HDR.fs  HDR.vs  PBRBRDF.fs  PBRBRDF.vs  PBRDeferredGeometry.fs  PBRDeferredGeometry.vs  PBRDeferredLighting.fs  PBRIrradianceConvolution.fs  PBRIrradianceConvolution.vs  PBRPrefilter.fs  PBRPrefilter.vs  Skybox.fs  Skybox.vs
Engine/Shaders/OpenGL/include/DeferredRendering/: GBufferVertexShader.glsl  SampleGBuffer.glsl
Engine/Shaders/OpenGL/include/Effect/: Blur.glsl
Engine/Shaders/OpenGL/include/Material/: PBR.glsl  Phong.glsl
Engine/Shaders/OpenGL/include/Object/: Camera.glsl  DirectionalLight.glsl  PointLight.glsl  SpotLight.glsl
Engine/Shaders/OpenGL/include/Shading/: PBR.glsl
Engine/Source/XYZ/: Engine.cpp  Engine.hpp  Exception.cpp  Exception.hpp
Engine/Source/XYZ/Audio/: AudioBuffer.hpp  AudioListener.cpp  AudioListener.hpp  AudioMetadata.cpp  AudioMetadata.hpp  AudioResource.cpp  AudioResource.hpp  AudioSource.cpp  AudioSource.hpp  AudioSystem.cpp  AudioSystem.hpp
Engine/Source/XYZ/Audio/CoreAudio/: CMakeLists.txt  CoreAudioPlayer.cpp  CoreAudioPlayer.hpp
Engine/Source/XYZ/Audio/Loader/: AudioLoader.cpp  AudioLoader.hpp
Engine/Source/XYZ/Audio/OpenAL/: CMakeLists.txt  OpenALAudioBuffer.cpp  OpenALAudioBuffer.hpp  OpenALAudioSystem.cpp  OpenALAudioSystem.hpp  OpenALListener.cpp  OpenALListener.hpp  OpenALPlayer.cpp  OpenALPlayer.hpp  OpenALSource.cpp  OpenALSource.hpp
Engine/Source/XYZ/Entity/: Entity.hpp  EntityManager.hpp  Settings.hpp
Engine/Source/XYZ/Graphics/Material/: Material.hpp  MaterialFactory.hpp  PBRMaterial.cpp  PBRMaterial.hpp  PhongMaterial.cpp  PhongMaterial.hpp
Engine/Source/XYZ/Graphics/Mesh/: Mesh.cpp  Mesh.hpp  MeshLoader.hpp  Vertex.cpp  Vertex.hpp
Engine/Source/XYZ/Input/: InputController.cpp  InputController.hpp  InputDevice.cpp  InputDevice.hpp  InputDeviceManager.cpp  InputDeviceManager.hpp
Engine/Source/XYZ/Math/: Frustum.cpp  Frustum.hpp  Vector.cpp  Vector.hpp
Engine/Source/XYZ/Physics/: PhysicsEngine.cpp  PhysicsEngine.hpp
Engine/Source/XYZ/Resource/: Resource.cpp  Resource.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourcePtr.hpp
Engine/Source/XYZ/Scene/: Camera.cpp  Camera.hpp  MeshObject.cpp  MeshObject.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
Engine/Source/XYZ/Terrain/: Terrain.cpp  Terrain.hpp  TerrainModel.cpp  TerrainModel.hpp
Engine/Source/XYZ/Utility/: Quadtree.hpp
Engine/Sources/: GameEngine.swift  ObjLoader.cpp
Engine/Sources/Animation/: Animation.swift  AnimationCurve.swift
Engine/Sources/Input/: InputController.swift  Keyboard.swift  Mouse.swift
Engine/Sources/Model/: Material.swift  Mesh.swift  Model.swift  OBJ.swift
Engine/Sources/Renderer/: DeferredRenderingTechnique.swift  ForwardRenderingTechnique.swift  Framebuffer.swift  PBRDeferredRenderingTechnique.swift  RenderBuffer.swift  Renderer.swift  RenderingTechnique.swift  Shader.swift  Texture.swift  VertexBuffer.swift
Engine/Sources/Renderer/OpenGL/: OpenGLFramebuffer.swift  OpenGLRenderBuffer.swift  OpenGLRenderer.swift  OpenGLShader.swift  OpenGLTexture.swift  OpenGLVertexBuffer.swift
Engine/Sources/Resource/: Resource.swift  ResourceLoader.swift  ResourceManager.swift
Engine/Sources/Scene/: Camera.swift  Entity.swift  Light.swift  Renderable.swift  Scene.swift
Engine/Sources/Terrain/: Terrain.swift  TerrainManager.swift
Engine/Sources/Utility/: Color.swift  Image.swift  SimplexNoise.swift  Vertex.swift
Engine/include/: ObjLoader.h  module.modulemap  stb_image.h
Game/: CMakeLists.txt  Info.plist.in
Game/Launcher/: main.swift
Game/Resources/: AppIcon.icns
Game/Resources/Objects/: ISS.blend  ISS.blend1
Game/Resources/Planet/Data/: Galaxy.json
Game/Resources/Planet/Models/: Earth.json
Game/Resources/Shaders/Deferred/: Geometry.fs  Geometry.vs  Lighting.fs  Lighting.vs  Lighting2.fs
Game/Resources/Shaders/Gouraud/: Gouraud.fs  Gouraud.vs
Game/Resources/Shaders/Phong/: Phong.fs  Phong.vs
Game/Resources/Shaders/ShadowMapping/: ShadowMapping.fs  ShadowMapping.vs
Game/Sandbox/: CMakeLists.txt  main.swift
Game/Source/: main.cpp
Game/Source/GameZYX/: Game.cpp  Game.hpp  World.cpp  World.hpp
Game/Source/GameZYX/Input/: FirstResponder.cpp  FirstResponder.hpp
Game/Source/Resources/Objects/: Container.blend  Container.blend1  Rock.blend  Terrain.blend  Terrain.blend1
Game/Sources/: Game.swift
Game/Sources/Controller/: GameInputController.swift
Game/Sources/Entity/: Orbit.swift
Game/Sources/Entity/Craft/: Craft.swift  CraftAssembly.swift  CraftExplosionReason.swift  CraftType.swift
Game/Sources/Entity/Resource/: Fuel.swift  Resource.swift
Game/Sources/Entity/World/: CelestialBody.swift  Galaxy.swift  GalaxyType.swift  Moon.swift  Planet.swift  PlanetType.swift  SolarSystem.swift  SolarSystemType.swift  Star.swift
Game/Sources/Manager/: CelestialBodyManager.swift
WorldEditor/: CMakeLists.txt  Info.plist.in  Resources.qrc
WorldEditor/Resources/: AppIcon.icns
WorldEditor/Resources/QDarkStyle/: style.qrc  style.qss
WorldEditor/Source/: main.cpp
(+249 files in other folders)
